--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-
+            dist/github-contribution-grid-snake.svg
         env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
