--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake.gif?color_snake=#C7395F&color_dots=#DED4E8,#E8BA40,#000,#E8BA40aa,#E8BA40aa
+            dist/github-contribution-grid-snake.gif?color_snake=#C7395F&color_dots=#DED4E8,#E8BA40dd,#E8BA40,#E8BA40aa,#E8BA40aa
         env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
